<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sparse_bundle_adjustment</name>
  <description>ROS wrapper for the sparse bundle adjustment (sba) library (needed for slam_karto)</description>
  <version>0.4.2</version>
  <license>BSD</license>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>
  <maintainer email="amoriarty@fetchrobotics.com">Alexander Moriarty</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>liblapack-dev</depend>
  <depend>libblas-dev</depend>
  <depend>suitesparse</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
